fix spacing issue once and for all

--- a/assets/ding.scss
+++ b/assets/ding.scss
@@ -230,8 +230,8 @@ h6, .h6, h5, .h5, h4, .h4 {
   margin-top: 1rem;
 }
 
-.start {
-  margin-top: 1.5rem;
+.maincontent h2:first-of-type, .maincontent .h2:first-of-type {
+  margin-top: 0rem;
 }
 
 li {
